--- a/3. Making use of the model.ipynb
+++ b/3. Making use of the model.ipynb
@@ -317,7 +317,7 @@
     "        non_trans = np.argwhere(filter_img[:, :, 3] > 0)\n",
     "\n",
     "        if(non_trans.shape[0] > roi_color.shape[0]*roi_color.shape[1]):\n",
-    "            return frame\n",
+    "            return roi\n",
     "\n",
     "        roi_color[non_trans[:, 0], non_trans[:, 1],\n",
     "                  :3] = filter_img[non_trans[:, 0], non_trans[:, 1], :3]\n",
