adding readme file

--- a/3. Making use of the model.ipynb
+++ b/3. Making use of the model.ipynb
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Absolute win](https://i.kym-cdn.com/photos/images/newsfeed/001/490/511/148.jpg)\n",
+    "<img src=\"./images/absolute_win.jpg\" /> \n",
     "### **Greate**\n",
     "now let's get to business  \n",
     "Of course if you train your model more than I did, or design a better architecture, you'll get better results\n",
